# Capstone---Football

./: .gitignore  env.sv  git_hub.md  requirements.txt
.venv~/: pyvenv.cfg
.venv~/Scripts/: activate  activate.bat
capstone-football/: README.md  pyproject.toml
capstone-football/.dg/: telemetry.yaml
dagster_project/: pyproject.toml
dagster_project/.dg/: telemetry.yaml
dagster_project/src/dagster_project/: __init__.py  definitions.py  schedules.py
dbt/: dbt_project.yml
dbt/models/marts/: audit_manager_player_unmatched.sql  dim_fixture.sql  dim_league.sql  dim_player.sql  dim_team.sql  fct_fixture_live_card.sql  fct_fixture_live_event.sql  fct_fixture_live_goal.sql  fct_fixture_live_substitution.sql  fct_football_manager.sql
dbt/models/staging/: schema.yml  sources.yml  stg_PLAYERS_STATISTICS.sql  stg_fixture_info.sql  stg_fixture_line_up.sql  stg_fixture_players_statistics.sql  stg_fixture_predictions.sql  stg_fixture_statistics.sql  stg_football_manager.sql  stg_kafka_fixture_live_events.sql  stg_league.sql  stg_player_trophies.sql  stg_team_statistics.sql  stg_teams_info.sql
docker/: Dockerfile  docker-compose.yml
docker/kafka/: docker-compose.kafka.yml
docs/: requirements-github.md
src/extract/: extract_football.py
src/extract/base/: api_limits.py  rate_limiter.py  safe_get.py
src/extract/football_api/: API_Fixture.py  API_League.py  API_Player.py  (+4 more)
src/kafka/: consume_live_events.py  produce_live_events.py
src/load/: base.py  instruction_for_dagster.md  load_fixture_history.py  load_fixture_kaggle.py  load_football.py  test.py
(+7 files in other folders)
